# factorio-file-parser

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  schema.rs
tests/: level-dat-tests.rs  mod-settings-tests.rs  tests.rs
