[package]
name = "factorio-file-parser"
version = "0.2.0"
authors = ["circlesabound <circlesabound@users.noreply.github.com>"]
license = "MIT"
description = "A library for parsing the mod-settings.dat file and level-init.dat file header for Factorio"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = [ "derive" ] }

[dev-dependencies]
serde_json = "1.0"
